# CISIA

./: .env.example  .gitignore  Presentation_BrunoBiscay.pptx  README.md  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  ~$Presentation_BrunoBiscay.pptx  ~WRL0003.tmp
.dvc/: config
.github/workflows/: cd.yml  ci.yml
backend/: Dockerfile  database.py  main.py  requirements.txt
backend/tests/: conftest.py  test_main.py
common/: embeddings.py  models.py  schema.py
data/: dataset.parquet.dvc
frontend/: Dockerfile  app.py
importer/: Dockerfile  import.py  requirements.txt
ml/: config.py  extract_dataset.py  feature_selection.py  metrics.py  models.py  monitoring.py  prepare_production_data.py  preprocessing.py  promote_model.py  train.py  tune.py
mlflow/: Dockerfile  requirements.txt
orchestration/: Dockerfile  deployments.py  flows.py  requirements.txt
sources/: import_csv.py
